--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PetarPaskas/DefinitelyNotImportant.git"
@@ -22,6 +19,8 @@
 
 
   "scripts":{
+    "test": "echo \"Error: no test specified\" && exit 1",
     "compile-sass":"node-sass sass/main.scss css/style.css -w"
   }
 }
+sss
