--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -29,6 +29,10 @@
             "redirect":"/"
         },
         {
+            "route":"/index.html",
+            "redirect":"/"
+        },
+        {
             "route":"/services",
             "rewrite":"/links/services.html"
         },
