--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile-sass":"node-sass sass/main.scss css/style.dev.css -w",
+    "compile-sass-dev":"node-sass sass/main.scss css/style.css -w",
     "build":"echo \"Building...\"",
     "prefix-css":"postcss --use autoprefixer -b \"last 10 versions\" css/style.dev.css -o css/style.prefix.css",
     "compress-css":"node-sass ./css/style.prefix.css ./css/style.css --output-style compressed",
