--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile-sass-dev":"node-sass sass/main.scss css/style.css -w",
     "build":"echo \"Building...\"",
-    "prefix-css":"postcss --use autoprefixer -b \"last 10 versions\" css/style.dev.css -o css/style.prefix.css",
+    "prefix-css":"postcss --use autoprefixer -b \"last 10 versions\" css/style.css -o css/style.prefix.css",
     "compress-css":"node-sass ./css/style.prefix.css ./css/style.css --output-style compressed",
     "build-css":"npm-run-all compile-sass prefix-css compress-css"
   }
